--- a/Phd_thesis/bibliography.bib
+++ b/Phd_thesis/bibliography.bib
@@ -7180,6 +7180,18 @@ author = "Moritz Diehl and H.Georg Bock and Johannes P. Schl{\"o}der and Rolf Fi
 }
 
 
+@article{chen1998quasi,
+  title={A quasi-infinite horizon nonlinear model predictive control scheme with guaranteed stability},
+  author={Chen, Hong and Allg{\"o}wer, Frank},
+  journal={Automatica},
+  volume={34},
+  number={10},
+  pages={1205--1217},
+  year={1998},
+  publisher={Elsevier}
+}
+
+
 @article{ompl,
   title={The open motion planning library},
   author={Sucan, Ioan A and Moll, Mark and Kavraki, Lydia E},
@@ -7192,3 +7204,42 @@ author = "Moritz Diehl and H.Georg Bock and Johannes P. Schl{\"o}der and Rolf Fi
 }
 
 
+
+@article{brunton2025machine,
+  title={Machine Learning for Sparse Nonlinear Modeling and Control},
+  author={Brunton, Steven L and Zolman, Nicholas and Kutz, J Nathan and Fasel, Urban},
+  journal={Annual Review of Control, Robotics, and Autonomous Systems},
+  volume={8},
+  year={2025},
+  publisher={Annual Reviews}
+}
+
+
+@article{gros2020linear,
+  title={From linear to nonlinear MPC: bridging the gap via the real-time iteration},
+  author={Gros, S{\'e}bastien and Zanon, Mario and Quirynen, Rien and Bemporad, Alberto and Diehl, Moritz},
+  journal={International Journal of Control},
+  volume={93},
+  number={1},
+  pages={62--80},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+@article{keerthi1988optimal,
+  title={Optimal infinite-horizon feedback laws for a general class of constrained discrete-time systems: Stability and moving-horizon approximations},
+  author={Keerthi, S Sathiya and Gilbert, Elmer G},
+  journal={Journal of optimization theory and applications},
+  volume={57},
+  pages={265--293},
+  year={1988},
+  publisher={Springer}
+}
+
+
+@book{nocedal1999numerical,
+  title={Numerical optimization},
+  author={Nocedal, Jorge and Wright, Stephen J},
+  year={1999},
+  publisher={Springer}
+}
