--- a/Phd_thesis/formal/abstract.tex
+++ b/Phd_thesis/formal/abstract.tex
@@ -1,7 +1,7 @@
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
 
-Marine robots have become indispensable for inspection tasks across diverse environments, from deep-sea surveying to aerial monitoring of offshore installations. Autonomy in these operations is increasingly vital—not just to reduce operational expenses, but to ensure consistent, high-quality performance with minimal human oversight. Advanced real-time control and planning algorithms such as Model Predictive Control (MPC) are key in marine robotics autonomy, as it can handle systems with high nonlinearity and many degrees of freedom. However, practical implementation of MPC in marine robotics remains in its early stages, with significant challenges still to overcome. 
+Marine robots have become indispensable for inspection tasks across diverse environments, from deep-sea surveying to aerial monitoring of offshore installations. Autonomy in these operations is increasingly vital, not just to reduce operational expenses but to ensure consistent high-quality performance with minimal human oversight. Advanced real-time control and planning algorithms such as Model Predictive Control (MPC) are key in marine robotics autonomy, as it can handle nonlinear systems with high degrees of freedom. However, practical implementation of MPC in marine robotics remains in its early stages, with significant challenges still to overcome. 
 
 This research develops optimal navigation algorithms for autonomous underwater inspection robots. It introduces novel methods that integrate learning-based modeling techniques with MPC to address the unique challenges of these environments.
 
@@ -16,15 +16,15 @@ By integrating data-driven models and task-specific path planners with MPC, this
 % Abstract in Danish or any other language
 \chapter*{Resum\'e}
 \addcontentsline{toc}{chapter}{Resum\'e (Danish)}
-Marine robotter er blevet uundværlige til inspektionsopgaver på tværs af forskellige miljøer, fra dybhavsundersøgelser til luftbåren overvågning af offshore-installationer. Autonomi i disse operationer bliver stadig vigtigere – ikke kun for at reducere driftsomkostningerne, men også for at sikre ensartet ydeevne af høj kvalitet med minimal menneskelig overvågning. Avancerede realtidsstyrings- og planlægningsalgoritmer såsom Model Prædiktiv Kontrol (MPC) er nøglen til autonomi inden for marin robotik, da de kan håndtere systemer med høj ikke-linearitet og mange frihedsgrader. Dog er den praktiske implementering af MPC i marin robotik stadig i sin vorden, med betydelige udfordringer, der endnu skal overvindes.
+Marine robotter er blevet uundværlige for inspektionsopgaver i forskelligartede miljøer, spændende fra dybhavskartlægning til luftbåren overvågning af offshore-installationer. Autonomi i disse operationer er af stigende vital betydning, ikke kun for at reducere driftsomkostningerne, men også for at sikre en konsekvent og højkvalitets ydeevne med minimalt menneskeligt tilsyn. Avancerede realtids-regulerings- og planlægningsalgoritmer, såsom Model Prædiktiv Kontrol (MPC), er essentielle for autonomi inden for marin robotteknologi, idet de kan håndtere ulineære systemer med mange frihedsgrader. Den praktiske implementering af MPC i marin robotteknologi er dog stadig på et tidligt stadie, og betydelige udfordringer mangler endnu at blive overvundet.
 
-Denne forskning udvikler optimale navigationsalgoritmer til autonome undervandsinspektionsrobotter. Den introducerer nye metoder, der integrerer læringsbaserede modelleringsteknikker med MPC for at tackle de unikke udfordringer i disse miljøer.
+Denne forskning udvikler optimale navigationsalgoritmer til autonome undervandsinspektionsrobotter. Den introducerer nye metoder, der integrerer læringsbaserede modelleringsteknikker med MPC for at adressere de unikke udfordringer, som disse miljøer udgør.
 
-Et centralt bidrag i dette arbejde er udviklingen af en open-source marin robotik simulator, der leverer yderst realistisk rendering og fysik, hvilket muliggør sikker, omkostningseffektiv og effektiv testning af algoritmer samt indsamling af syntetiske data. Derudover udvikles en ny MPC-baseret dækningsstiplanlægningstilgang, der tager højde for begrænsninger ved kabelføring (tethering), samtidig med at den sikrer fuldstændig områdedækning.
+Et centralt bidrag i dette arbejde er udviklingen af en open-source simulator for marin robotteknologi, der leverer yderst realistisk rendering og fysik. Dette muliggør sikker, omkostningseffektiv og effektiv afprøvning af algoritmer samt indsamling af syntetiske data. Derudover udvikles en ny MPC-baseret metode til dækningsplanlægning (coverage path planning), der tager højde for begrænsninger fra kabelføring (tethering) og samtidig sikrer fuldstændig arealdækning.
 
-For at forbedre nøjagtigheden af dynamisk modellering af undervandsfartøjer anvendes læringsbaserede tilgange til at fange komplekse undervandsdynamikker på tværs af flere tidsskalaer. Specifikt bruges Gaussiske Processer (GP) og Fysik-Informerede Neurale Netværk (PINN) til at forbedre modelleringen af undervandsfartøjers dynamik og derved forbedre MPC's ydeevne og sikkerhed.
+For at forbedre præcisionen i den dynamiske modellering af undervandsfartøjer anvendes læringsbaserede tilgange til at indfange kompleks undervandsdynamik over flere tidsskalaer. Specifikt anvendes Gaussiske Processer og Fysik-Informerede Neurale Netværk (PINNs) til at forbedre modelleringen af undervandsfartøjers dynamik, hvilket forøger ydeevnen og sikkerheden af MPC.
 
-Ved at integrere datadrevne modeller og opgavespecifikke stiplanlæggere med MPC muliggør dette arbejde udviklingen af mere pålidelige og sikrere algoritmer til autonom marin inspektion. Resultaterne fremmer state-of-the-art inden for marin robotik og bidrager til den virkelige implementering af fuldt autonome inspektions- og opmålingsoperationer i komplekse marine miljøer.
+Ved at integrere datadrevne modeller og opgavespecifikke ruteplanlæggere med MPC, muliggør dette arbejde udviklingen af mere pålidelige og sikrere algoritmer til autonom marin inspektion. Resultaterne fremmer den teknologiske forkant (state-of-the-art) inden for marin robotteknologi og bidrager til den virkelige implementering af fuldt autonome inspektions- og kortlægningsoperationer i komplekse marine miljøer.
 %%%%
 %Arabic
 % \newpage
