--- a/Phd_thesis/formal/preface.tex
+++ b/Phd_thesis/formal/preface.tex
@@ -8,9 +8,9 @@
 % \section*{Project Design} Innovative Training Networks (ITN) - Marie Curie Actions
 This thesis concludes a three-year research journey carried out between July 2022 and June 2025. This work was conducted out as part of the Ph.D. program at the Graduate School of Technical Sciences (GSTS) at Aarhus University, in collaboration with EIVA A/S in Denmark. 
 
-Aarhus University served as the primary academic institution for this project, with the majority of the research conducted within the Department of Electrical and Computer Engineering, specifically in the Artificial Intelligence in Robotics group. This work was carried out under the supervision of Professor Erdal Kayacan. Industrial supervision was provided by Dr. Yury Brodskiy, research lead in the Autonomy department at EIVA A/S. 
+Aarhus University served as the primary academic institution for this project, with the majority of the research conducted within the Department of Electrical and Computer Engineering, specifically in the Artificial Intelligence in Robotics group. This work was carried out under the supervision of Professor Erdal Kayacan. Industrial supervision was provided by Dr. Yury Brodskiy, research lead in the Autonomy team at EIVA A/S. 
 
-The project was further enriched by the collaboration and mentorship of Dr. Mohit Mehindratta from GIM Robotics, whose expertise and ongoing guidance had a significant impact on the project's direction and outcomes. Professor Andriy Sarbakha from Aarhus University also contributed critical insights and guidance. In addition, during my research stay at the the German Research Center for Artificial Intelligence (DFKI), Dr. Bilal Wehbe provided thoughtful input and technical support that helped conduct the experimental aspects of the work.
+The project was further enriched by the collaboration and mentorship of Dr. Mohit Mehindratta from GIM Robotics and Professor Andriy Sarbakha from Aarhus University. In addition, during the research stay at the the German Research Center for Artificial Intelligence (DFKI), Dr. Bilal Wehbe provided thoughtful input and technical support that helped conduct the experimental work at DFKI.
 
 This thesis focuses on the development of data-driven optimal control and navigation methods for autonomous marine robotics inspection applications. The outcomes of this project include six published scientific papers in the fields of control theory and robotics and one submitted journal paper under review. The author of this thesis is the main author of six of these publications.
 
@@ -23,7 +23,7 @@ This research receives support from Innovation Fund Denmark grant number 2040-00
 
 \section*{Reading guide}
 \addcontentsline{toc}{section}{Reading guide}
-The contents of the individual Chapters in this dissertation with published manuscripts are introduced with an abstract summarising the contents of the Chapter and a reference to the original published work. References throughout the dissertation are listed at the end of the main document. The standard numbered style denounces the references. Hence, a citation is referred to by [Number]. Bibliographical citations appear at the end of the document where journal and proceedings papers are referred by author, article title between quotes, and journal names in \textit{italics}. Books are referred by author, title in \textit{italics}, publisher, edition, and year, while websites are referred by author, title, year, URL, and time of last visit. Figures, tables, and equations are numbered according to the particular Chapter they are placed in, where uppercase Roman numerals number Chapters. Therefore, the first figure in Chapter Three is assigned with figure number III.1 and the second III.2, etc. Descriptive captions for tables are found above relevant tables, and captions for figures are found under relevant figures. Additional explanatory concepts are added with footnotes, labeled with $\ast$, $\dagger$, $\ddagger$, and so forth.
+The contents of the individual Chapters in this dissertation with published manuscripts are introduced with an abstract summarising the contents of the Chapter and a reference to the original published work. References throughout the dissertation are listed at the end of the main document. The standard numbered style denounces the references. Hence, a citation is referred to by [Number]. Bibliographical citations appear at the end of the document where journal and proceedings papers are referred by author, article title between quotes, and journal names in \textit{italics}. Books are referred by author, title in \textit{italics}, publisher, edition, and year, while websites are referred by author, title, year, URL, and time of last visit. Figures, tables, and equations are numbered according to the particular Chapter they are placed in, where uppercase Roman numerals number Chapters. Therefore, the first figure in Chapter Three is assigned with figure number III.1 and the second III.2, etc. Descriptive captions for tables are found above relevant tables, and captions for figures are found under relevant figures. 
 
 \subsection*{Chapter's Guide}
 This thesis follows a collection-of-papers format and is organized into two main parts. 
@@ -44,20 +44,10 @@ The following scientific manuscripts (in chronological order) have been publishe
 
 \vspace{1em}
 
-\tcbset{
-  colback=gray!5!white, 
-  colframe=gray!75!black, 
-  boxrule=0.5pt, 
-  arc=4pt, 
-  boxsep=5pt, 
-  left=5pt, 
-  right=5pt, 
-  top=5pt, 
-  bottom=5pt,
-}
+
 
 %\begin{tcolorbox}[colback=gray!10, colframe=gray!80, title=\textbf{Publications}]
-\textbf{1.} \textbf{Amer, A.}, Mehndiratta, M., Brodskiy, Y., \& Kayacan, E. (2025). \textit{REACT: Real-time Entanglement-Aware Coverage Path Planning for Tethered Underwater Vehicles}. Submitted to the IEEE Transactions on Field Robotics, under review.\\[0.8em]
+\textbf{1.} \textbf{Amer, A.}, Mehndiratta, M., Brodskiy, Y., \& Kayacan, E. (2025). \textit{REACT: Real-time Entanglement-Aware Coverage Path Planning for Tethered Underwater Vehicles}. Submitted to the IEEE Transactions on Field Robotics, to be submitted.\\[0.8em]
 
 \textbf{2.} \textbf{Amer, A.}, Falsegar, D., Brodskiy, Y., \& Sarabakha, A. (2025). \textit{Modelling of Underwater Vehicles using Physics-Informed Neural Networks with Control}. Submitted to the International Joint Conference on Neural Networks (IJCNN), Accepted for publication.\\[0.8em]
 
@@ -76,7 +66,7 @@ The following scientific manuscripts (in chronological order) have been publishe
 
 \section*{Open-source contributions}
 
-Additionally, as part of this PhD, several outcomes of the research have been realized as open-source projects, supporting research on learning-based control, motion planning, and simulation for field robotics applications.
+Additionally, as part of this PhD, several outcomes of the research have been realized as open-source projects:
 
 
 
@@ -168,8 +158,8 @@ Paderborn University \\
 \href{mailto:abkar@mpe.au.dk}{erdal.kayacan@uni-paderborn.de} \\[5pt]
 
 \textbf{Yury Brodskiy} \\
-Senior Software Engineer \\
-Computer Vision Group Leader \\
+Research \& Development Lead\\
+Autonomy \\
 EIVA A/S \\
 \href{mailto:ybr@eiva.com}{ybr@eiva.com} \\
 
@@ -199,7 +189,7 @@ which permits unrestricted use, distribution, and reproduction in any medium, pr
 
 {\Large \textbf{Project collaborators:}} 
 
-\vspace{7ex}
+\vspace{8ex}
 
 \begin{center}
 
@@ -225,9 +215,9 @@ which permits unrestricted use, distribution, and reproduction in any medium, pr
 
 \vspace{2ex}
 
-\includegraphics[width=0.2\textwidth, valign=c]{Phd_thesis/figs/logos/purdue.png}
-\hspace{14ex}
-\includegraphics[width=0.18\textwidth, valign=c]{Phd_thesis/figs/logos/zju.png}
+\includegraphics[width=0.17\textwidth, valign=c]{Phd_thesis/figs/logos/purdue.png}
+\hspace{16ex}
+\includegraphics[width=0.15\textwidth, valign=c]{Phd_thesis/figs/logos/zju.png}
 
 
 
