--- a/Phd_thesis/formal/preface.tex
+++ b/Phd_thesis/formal/preface.tex
@@ -28,9 +28,9 @@ The contents of the individual Chapters in this dissertation with published manu
 \subsection*{Chapter's Guide}
 This thesis follows a collection-of-papers format and is organized into two main parts. 
 
-\textbf{Part I} provides a comprehensive overview and contextual foundation for the research. It begins with a general introduction to the problem domain, followed by the formulation of the research hypothesis and an outline of the thesis structure. A background chapter on Model Predictive Control (\ac{MPC}) is included to support readers unfamiliar with the control framework. The core contributions of the thesis are presented across five dedicated chapters, each corresponding to one of the included peer-reviewed publications. These chapters provide contextual framing and technical insight, and in some cases, incorporate updated figures or results from post-publication experiments. Part I concludes with a final chapter that summarizes the main findings, discusses their implications, and outlines potential directions for future research in autonomous marine robotics and control.
+\textbf{Part I} provides a comprehensive overview and contextual foundation for the research. It begins with a general introduction to the problem domain, followed by the formulation of the research hypothesis and an outline of the thesis structure. A background chapter on data-driven model predictive control for marine robotics is included to support readers unfamiliar with the control framework. The core contributions of the thesis are presented across five dedicated chapters, each corresponding to one of the included peer-reviewed publications. These chapters provide contextual framing and technical insight, and in some cases, incorporate updated figures or results from post-publication experiments. Part I concludes with a final chapter that summarizes the main findings, discusses their implications, and outlines potential directions for future research in autonomous marine robotics and control.
 
-\textbf{Part II} includes the full versions of the four published (or accepted) research papers that constitute the core scientific contributions of the thesis. These are presented in their original form, with only minor formatting adaptations to align with the thesis layout.
+\textbf{Part II} includes the full versions of the five published (or submitted) research papers that constitute the core scientific contributions of the thesis. These are presented in their original form, with only minor formatting adaptations to align with the thesis layout.
 
 
 
